<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
